implementing rest functions

--- a/project-03/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/project-03/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -13,7 +13,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -38,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "view_sentence_range = (10, 20)\n",
@@ -85,7 +89,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -137,7 +143,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def token_lookup():\n",
@@ -177,7 +185,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -198,7 +208,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -573,7 +585,7 @@
     "# Learning Rate\n",
     "learning_rate = 0.001\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = 200\n",
+    "show_every_n_batches = 50\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -592,7 +604,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -684,7 +698,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -704,7 +720,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -747,7 +765,11 @@
     "    :return: Tuple (InputTensor, InitialStateTensor, FinalStateTensor, ProbsTensor)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None, None\n",
+    "    input_tensor = loaded_graph.get_tensor_by_name('input:0')\n",
+    "    initial_state_tensor = loaded_graph.get_tensor_by_name('initial_state:0')\n",
+    "    final_state_tensor = loaded_graph.get_tensor_by_name('final_state:0')\n",
+    "    probs_tensor = loaded_graph.get_tensor_by_name('probs:0')\n",
+    "    return input_tensor, initial_state_tensor, final_state_tensor, probs_tensor\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -778,7 +800,12 @@
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    #print('p: ', probabilities)\n",
+    "    int_to_vocab_list = list(int_to_vocab.values())\n",
+    "    #print(int_to_vocab_arr)\n",
+    "    choice = np.random.choice(int_to_vocab_list, p=probabilities)\n",
+    "    #print(choice)\n",
+    "    return choice\n",
     "\n",
     "\n",
     "\"\"\"\n",
