--- a/GAN-lesson-05/batch-norm/Batch_Normalization_Lesson-try.ipynb
+++ b/GAN-lesson-05/batch-norm/Batch_Normalization_Lesson-try.ipynb
@@ -100,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class NeuralNet:\n",
@@ -117,6 +119,10 @@
     "        return\n",
     "    \n",
     "    def build_network(self, initial_weights, activation_fn):\n",
+    "        '''\n",
+    "        initial_weigts: list of weights\n",
+    "        activation_fn: activation function\n",
+    "        '''\n",
     "        self.input_layer = tf.placeholder(tf.float32, [None, initial_weights[0].shape[0]])\n",
     "        \n",
     "        layer_in = self.input_layer\n",
